# bisslog-aws-lambda-py

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml  receive-changes.yml
bisslog_aws/: constants.py  init.py
bisslog_aws/lambda/: use_case_package.py
bisslog_aws/utils/: to_snake_case.py
bisslog_aws_lambda/aws_lambda/: lambda_aws_packager.py  lambda_handler_generator_manager.py  save_lambda_handler_resolver.py
bisslog_aws_lambda/aws_lambda/handler_generator/: aws_handler_gen_response.py  aws_handler_generator.py  handler_generator.py
bisslog_aws_lambda/aws_lambda/handler_generator/chains/: build_use_case_object.py  default_error_handler_generator.py  manager_trigger_handler_generator.py
bisslog_aws_lambda/aws_lambda/handler_generator/chains/trigger_generator/: aws_handler_trigger_generator.py  consumer_aws_event_bridge_handler_generator.py  consumer_aws_sns_handler_generator.py  consumer_aws_sqs_handler_generator.py  http_aws_handler_generator.py  schedule_aws_handler_generator.py  websocket_aws_handler_generator.py
bisslog_aws_lambda/cli/: __init__.py  lambda_aws_packager.py  lambda_handler_generator_base.py  lambda_handler_generator_manager_printer.py  lambda_handler_generator_manager_saver.py
tests/unit/utils/: test_to_snake_case.py
